2007-10-25  Sven Neumann  <sven@gimp.org>

	* tools/Makefile.am
	* tools/gimp-remote.[ch]
	* tools/gimp-remote-x11.c: split gimp-remote into common and X11
	specific code.

2007-10-25  Michael Natterer  <mitch@gimp.org>

	* configure.in: made all tests consistently use
	'test "x$foo" = xbar' instead of 5 variants of which some were
	broken. Spotted by Peter Breitenlohner, fixes bug #490068.

2007-10-25  Sven Neumann  <sven@gimp.org>

	* configure.in: bumped version to 2.4.1 (interface age 1).

2007-10-25  Sven Neumann  <sven@gimp.org>

	* app/plug-in/gimpplugin-message.c (gimp_plug_in_handle_proc_install):
	set the procedure name before parsing the image types.
	Fixes bug #490055.

2007-10-25  Sven Neumann  <sven@gimp.org>

	* app/display/gimpcanvas.c (gimp_canvas_gc_new): use INVERT
	instead of XOR if the xor-color is configured as white.

2007-10-24  Manish Singh  <yosh@gimp.org>

	* plug-ins/common/compose.c
	* plug-ins/common/decompose.c: generate PDB docs from the same
	source as the UI.

2007-10-24  Kevin Cozens  <kcozens@cvs.gnome.org>

	* Makefile.am: Applied patch from Stanislav Brabec which adds
	NEWS.pre-2-4, ChangeLog.pre-2-2 and ChangeLog.pre-2-4 to EXTRA_DIST.
	Fixes bug #489813.

2007-10-24  Simon Budig  <simon@gimp.org>

        * app/display/gimpdisplayshell.h: change the PROJ_ROUND macro
	to do proper rounding. Seems to work well.

2007-10-24  Sven Neumann  <sven@gimp.org>
            Michael Natterer  <mitch@gimp.org>

	* Made 2.4.0 release.